# digests-core

./: .gitignore  Cargo.toml  README.md  cbindgen.toml  lsp-mcp.json  output.md  output1.md  vox.json
.ai_agents/: porting_plan.md  remaining_hermes.md  structs.md
.ai_agents/coding-agent-prompts/: 001_scaffold_feed_core.txt  002_feed_parser.txt  003_fix_parser.txt
.claude/session_context/2025-12-08/docs/: brs_migration_summary.md  cleaners_migration_dom_query.md  client_migration_summary.md  scoring_migration_summary.md  scraper_to_dom_query_migration_wave2.md  wave3_migration_summary.md
.claude/session_context/2025-12-09/docs/: content_dom_transforms_phase1_phase2.md  phase3_unified_pipeline.md
.claude/session_context/20251208/docs/: content_rs_migration_status.md
.claude/session_context/20251209/docs/: phase4_post_cleaners_implementation.md
.lsp-mcp/semanticSearch/: metadata.db  vectors.hnsw.graph
.serena/: project.yml
.serena/memories/: project_overview.md  style_and_conventions.md  suggested_commands.md  task_completion.md
api_reference_responses/: feed_01_rock-paper-shotgun-latest-articles-feed.json  feed_02_techcrunch.json  feed_03_npr-topics-news.json  feed_04_new-heights-with-jason-travis-kelce.json  feed_07_pluralistic-daily-links-from-cory-doctor.json  request_2025-12-08.json
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/feed/: Cargo.toml
crates/feed/src/: duration_parse.rs  enrich.rs  enrichment.rs  error.rs  html_utils.rs  image_utils.rs  item_enrichment.rs  itunes_ext.rs  lib.rs  models.rs  parser.rs  time_parse.rs
crates/feed/tests/: parser_tests.rs  utils_tests.rs
crates/ffi/: Cargo.toml
crates/ffi/src/: lib.rs
crates/ffi/tests/: reader_ffi.rs
crates/hermes/: Cargo.toml
crates/hermes/data/: custom_extractors_full.json  custom_extractors_sample.json
crates/hermes/src/: client.rs  error.rs  lib.rs  metadata_adapter.rs  options.rs  reader_adapter.rs  reader_result.rs  result.rs
crates/hermes/src/dom/: brs.rs  cleaners.rs  mod.rs  scoring.rs
crates/hermes/src/extractors/: compiled.rs  content.rs  custom.rs  fields.rs  loader.rs  mod.rs  select.rs
crates/hermes/src/formats/: mod.rs
crates/hermes/src/resource/: mod.rs
crates/hermes/tests/: cli.rs  golden.rs  reader_bridge.rs
crates/hermes/tests/fixtures/: engadget.json  npr.json  theverge.json  vox.json
crates/hermes/tests/fixtures/golden/: engadget_go.json  npr_go.json  verge_go.json  vox_go.json
crates/hermes/tests/fixtures/html/: engadget.html  npr.html  theverge.html  vox.html
docs/: building.md  cli.md  feed.md  ffi.md  hermes.md  index.md  overview.md  troubleshooting.md
