[package]
name = "digests-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
digests-feed = { path = "../feed" }
reqwest = { version = "0.11", default-features = false, features = ["blocking", "rustls-tls", "gzip", "brotli", "deflate"] }
serde_json = "1"

[[bin]]
name = "digests-cli"
path = "src/main.rs"
