[package]
name = "digests-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
digests-feed = { path = "../feed" }
digests-hermes = { path = "../hermes" }
reqwest = { version = "0.12.25", default-features = false, features = ["blocking", "rustls-tls", "gzip", "brotli", "deflate"] }
serde_json = "1"
url = "2"

[[bin]]
name = "digests-cli"
path = "src/main.rs"
