[package]
name = "digests-ffi"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["staticlib", "cdylib", "rlib"]

[dependencies]
bumpalo = "3"
libc = "0.2"
chrono = { version = "0.4", features = ["clock"] }
digests-feed = { path = "../feed" }
digests-hermes = { path = "../hermes" }
reqwest = { version = "0.12.25", default-features = false, features = ["blocking", "rustls-tls", "gzip", "brotli", "deflate"] }
url = "2"
